# pdf-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .snyk  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
src/voltaire/: __init__.py
src/voltaire/pdfservice/: __init__.py
src/voltaire/pdfservice/client/: __init__.py  client.py
src/voltaire/pdfservice/models/: __init__.py  requests.py  responses.py
src/voltaire/pdfservice/server/: __init__.py  app.py
src/voltaire/pdfservice/server/pdf_to_html/: __init__.py  _columns.py  _constants.py  _service.py
src/voltaire/pdfservice/server/routes/: __init__.py  conversion.py  core.py  extraction.py  helpers.py  pdf.py
tests/server/: conftest.py  test_detect_type.py  test_error_handling.py  test_extract_text.py  test_format_span.py  test_from_html.py  test_hash.py  test_health.py  test_to_html.py  test_to_images.py  test_validate.py
typings/pymupdf/: __init__.pyi
